# onboard-pedro-dietrich-llm

./: .gitignore  README.md  pyproject.toml
scripts/: 01_langchain_introduction.py  02_langchain_chatbot.py  03_langchain_chat_history.py  03_langchain_runnable_history.py  04_langchain_tooling.py  05_langgraph_tooling.py  06_langgraph_multi_agent.py  07_langgraph_structured_routing.py  08_langgraph_custom_memory.py  chat_config.py  chat_history.py  db.py  tools.py  web_search.py
